--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,24 @@
+// .body{
+//   --ion-background-color: #ccfa83;
+// }
+
+// .head{
+//   --ion-toolbar-background:#f7faa0;
+// }
+
+.kartu{
+  // --ion-border-color:black;
+  box-shadow: 8px 10px rgba(0, 0, 0, 0.137);
+  background-color: #d6f1f8; 
+  text-align: center; 
+  border-color: green;
+  max-width: 100%; 
+  border-width: 100px 100px 100px 100px;
+  margin: 0 auto;
+}
+
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -24,4 +42,14 @@
 
 #container a {
   text-decoration: none;
+}
+
+.bottom-sheet-popover .popover-content {
+  width: 100% !important;
+    left: 0 !important;
+    bottom: 0 !important;
+    right: 0 !important;
+    top: calc(100% - 200px) !important;
+    max-height: 200px;
+    min-height: 200px; 
 }
