--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,11 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-color-greenbg: #ccfa83;
+  --ion-color-greenbg-rgb: 204, 250, 131;
+
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -232,5 +237,14 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
+  }
+
+  .ion-color-greenbg {
+    --ion-color-base: var(--ion-color-greenbg);
+    --ion-color-base-rgb: var(--ion-color-greenbg-rgb);
+    // --ion-color-contrast: var(--ion-color-favorite-contrast);
+    // --ion-color-contrast-rgb: var(--ion-color-favorite-contrast-rgb);
+    // --ion-color-shade: var(--ion-color-favorite-shade);
+    // --ion-color-tint: var(--ion-color-favorite-tint);
   }
 }
