--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,9 +5,8 @@
     </ion-title>
     <ion-buttons slot="end">
       <ion-button>
-        <img *ngIf="modekids == true" (click)="ablekid()" src="assets/img/kidsmode.png" />
-        <img *ngIf="modekids == false" (click)="ablekid()" src="assets/img/unkidsmode4.png" />
-        <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+        <img *ngIf="modekids == true" (click)="ablekid()" src="assets/img/kidsmode.png" width="30"/>
+        <img *ngIf="modekids == false" (click)="ablekid()" src="assets/img/unkidsmode4.png" width="30"/>
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
