--- a/src/app/myclass/myclass.page.html
+++ b/src/app/myclass/myclass.page.html
@@ -91,7 +91,7 @@
         <ion-row>
           <ng-template *ngIf="show4==true;then templatefav4"> </ng-template>
           <ng-template #templatefav4>
-            <ion-col>
+            <ion-col class="kelas">
               <ion-item lines="none" style="padding-bottom:10px;">
                 <ion-text>Sekolah Minggu</ion-text>
               </ion-item>
